add cases for logintest